--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -41,7 +41,7 @@ body {
 }
 
 .page-wrapper{
-  min-height: 50vh;
+  min-height: 60vh;
 }
 
 .main-footer {
@@ -58,4 +58,11 @@ body {
 
 .github-project {
   color: var(--tertiary);
+}
+
+
+@media only screen and (max-width: 700px) {  
+  .credit-container {    
+    flex-direction : column-reverse;  
+  }  
 }
