--- a/views/add-credit.pug
+++ b/views/add-credit.pug
@@ -28,22 +28,22 @@ head
               .input-group.mb-3
                 span#basic-addon1.input-group-text  Amount 
                 input#input-credit-amt.form-control(type='text' placeholder='Credit Amount')
-            button.btn.btn-primary(type='submit') Add Credits to User Wallet
+            button.btn.btn-primary.btn-add-credits(type='submit') Add Credits to User Wallet
         .col-md-5
           .alert.alert-success.alert-dismissible.fade.show.mb-1.alert-credit(role='alert')
             strong Credited
             button.btn-close(type='button' data-bs-dismiss='alert' aria-label='Close')
           .alert.alert-warning.alert-dismissible.fade.show.mb-1.alert-user1(role='alert')
-            | added 500 credits to user with id: 2
+            span.alert-user1-text added 500 credits to user with id: 2
             button.btn-close(type='button' data-bs-dismiss='alert' aria-label='Close')
           .alert.alert-warning.alert-dismissible.fade.show.mb-1.alert-parent1(role='alert')
-            | added 500 credits to user with id: 2
+            span.alert-parent1-text added 500 credits to user with id: 2
             button.btn-close(type='button' data-bs-dismiss='alert' aria-label='Close')
           .alert.alert-warning.alert-dismissible.fade.show.mb-1.alert-parent2(role='alert')
-            | added 500 credits to user with id: 2
+            span.alert-parent2-text added 500 credits to user with id: 2
             button.btn-close(type='button' data-bs-dismiss='alert' aria-label='Close')
           .alert.alert-warning.alert-dismissible.fade.show.alert-parent3(role='alert')
-            | added 500 credits to user with id: 2
+            span.alert-parent3-text added 500 credits to user with id: 2
             button.btn-close(type='button' data-bs-dismiss='alert' aria-label='Close')
   footer.container-fluid.m-0.main-footer.text-center.p-3
     a(href='https://github.com/rg-rupeee')
@@ -54,7 +54,7 @@ head
     .footer-subtitle.p-0.fs-6
       | checkout the source code 
       a.github-project(href='https://github.com/rg-rupeee/mlm-refferal-tracking') here
+script(src='https://unpkg.com/axios/dist/axios.min.js')
 script(src='assets/js/script.js')
 // Option 1: Bootstrap Bundle with Popper
 script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js' integrity='sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4' crossorigin='anonymous')
-  script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js' integrity='sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ==' crossorigin='anonymous' referrerpolicy='no-referrer')
