--- a/views/index.pug
+++ b/views/index.pug
@@ -20,7 +20,8 @@ head
   .container-fluid.page-wrapper.my-5.mx-0.px-0
     .table-heading.m-4
       h1 All Users
-      button.btn.btn-primary.rounded-pill(type='button') Add User
+      a(href="add-user") 
+        button.btn.btn-primary.rounded-pill(type='button') Add User
     .table-responsive.container-fluid
       .table-container.m-3
         table.table.table-bordered
