--- a/views/index.pug
+++ b/views/index.pug
@@ -17,6 +17,8 @@ head
     .container-fluid.text-center.main-header.m-0
       h1.main-title.py-3  Multi-level Marketing Referral Tracking system 
       h5.main-subtitle.pt-2.fs-6 Rewards based on 3 - Layer Deep Referral
+      a(href='https://documenter.getpostman.com/view/13777820/TzY3BbPZ')
+        .btn.btn-primary.mt-3 Api Docs
   .container-fluid.page-wrapper.my-5.mx-0.px-0
     .table-heading.m-4
       h1 All Users
